@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-106: Change prepareSuperstep() to make
+  setMessages(Iterable<M> messages) package-private. (aching)
+ 
   GIRAPH-105: BspServiceMaster.checkWorkers() should return empty
   lists instead of null. (ssc via aching)
 
